# AzureSphereCookBook

./: README.md
C++toolchain/: AzureSphereRTCoreToolchainCXX.cmake  readme.md
CICDTestboard/: FeatherAzureSphere.GBL  FeatherAzureSphere.GBO  FeatherAzureSphere.GBS  FeatherAzureSphere.GKO  FeatherAzureSphere.GTL  FeatherAzureSphere.GTO  FeatherAzureSphere.GTP  FeatherAzureSphere.GTS  FeatherAzureSphere.TXT  FeatherAzureSphere.b#1  FeatherAzureSphere.b#2  FeatherAzureSphere.b#3  FeatherAzureSphere.b#4  FeatherAzureSphere.b#8  FeatherAzureSphere.b#9  FeatherAzureSphere.brd  FeatherAzureSphere.dri  FeatherAzureSphere.gpi  FeatherAzureSphere.pro  FeatherAzureSphere.s#2  FeatherAzureSphere.s#3  FeatherAzureSphere.s#4  FeatherAzureSphere.s#5  FeatherAzureSphere.s#6  FeatherAzureSphere.s#8  FeatherAzureSphere.s#9  FeatherAzureSphere.sch  FeatherAzureSphereLongTall.b#1  FeatherAzureSphereLongTall.b#2  FeatherAzureSphereLongTall.b#3  FeatherAzureSphereLongTall.b#4  FeatherAzureSphereLongTall.b#5  FeatherAzureSphereLongTall.b#6  FeatherAzureSphereLongTall.b#7  FeatherAzureSphereLongTall.brd  FeatherAzureSphereLongTall.pro  FeatherAzureSphereLongTall.sch  FeatherAzureSphereLongTall_00.job  FeatherAzureSphereLongTall_01.job  FeatherAzureSphereLongTall_02.job  (+62 more)
CICDTestboard/FeatherAzureSphere_2019-07-04/CAMOutputs/Assembly/: FeatherAzureSphere.txt
CICDTestboard/FeatherAzureSphere_2019-07-04/CAMOutputs/DrillFiles/: drill_1_16.xln
CICDTestboard/FeatherAzureSphere_2019-07-04/CAMOutputs/GerberFiles/: copper_bottom.gbr  (+8 more)
EagleLibrary/: AzureSphere.lbr  readme.md
Mt3620BlobDownload/: Mt3620BlobDownload.sln  README.md
Mt3620BlobDownload/Mt3620BlobDownload/: Mt3620BlobDownload.vcxproj  Mt3620BlobDownload.vcxproj.filters  app_manifest.json  main.c
Mt3620ProgrammaticReset/: Mt3620ProgrammaticReset.sln  README.md
Mt3620ProgrammaticReset/Mt3620ProgrammaticReset/: Mt3620ProgrammaticReset.vcxproj  app_manifest.json  main.c
Mt3620SPIFlashMemory/: Mt3620SPIFlashMemory.sln
Mt3620SPIFlashMemory/Mt3620SPIFlashMemory/: Mt3620SPIFlashMemory.vcxproj  app_manifest.json  main.c
Mt3620SimpleSPI/: Mt3620SimpleSPI.sln  README.md
Mt3620SimpleSPI/Mt3620SimpleSPI/: Mt3620SimpleSPI.vcxproj  Mt3620SimpleSPI.vcxproj.filters  app_manifest.json  epoll_timerfd_utilities.h  main.c
TFLiteHost_RTApp_MT3620_BareMetal/: AzureSphereRTCoreToolchainCXX.cmake  CMakeLists.txt  CMakeLists.txt_libflitemcu_speech_test  README.md  linker.ld  main.c
micro_speech_test_simple/make/: CMakeLists.txt  CMakeSettings.json  Makefile  main.c_old
micro_speech_test_simple/make/tensorflow/lite/experimental/micro/azuresphere/: debug_log.cc
micro_speech_test_simple/make/tensorflow/lite/experimental/micro/examples/micro_speech/: micro_speech_test.cc
